# ember

./: LICENSE  README.MPI.halo3d  README.MPI.halo3d-26  README.MPI.incast  README.MPI.randominc  README.MPI.sweep3d  README.SHMEM.hotspotinc  README.md
mpi/halo3d/: Makefile  halo3d.c
mpi/halo3d-26/: Makefile  halo3d-26.c
mpi/incast/: Makefile  incast.c
mpi/lqcd/: CMakeLists.txt  README  lqcd.c  lqcd.h  test.c
mpi/pingpong/: Makefile  pingpong.c
mpi/sweep3d/: Makefile  sweep3d.c
shmem/hotspotinc/: Makefile  hotspotinc.c
shmem/randominc/: Makefile  randominc.c
